--- a/nest/nest/Views/Home/Index.cshtml
+++ b/nest/nest/Views/Home/Index.cshtml
@@ -1,37 +1,28 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+@model HomeVM
 <main class="main">
     <section class="home-slider position-relative mb-30">
         <div class="container">
             <div class="home-slide-cover mt-30">
                 <div class="hero-slider-1 style-4 dot-style-1 dot-style-1-position-1">
-                    <div class="single-hero-slider single-animation-wrap" style="background-image: url(assets/imgs/slider/slider-1.png)">
-                        <div class="slider-content">
-                            <h1 class="display-2 mb-40">
-                                Don’t miss amazing<br />
-                                grocery deals
-                            </h1>
-                            <p class="mb-65">Sign up for the daily newsletter</p>
-                            <form class="form-subcriber d-flex">
-                                <input type="email" placeholder="Your emaill address" />
-                                <button class="btn" type="submit">Subscribe</button>
-                            </form>
+                    @foreach (var item in Model.Sliders)
+                    {
+                        <div class="single-hero-slider single-animation-wrap" style="background-image: url(../../assets/imgs/slider/@item?.ImageUrl)">
+                            <div class="slider-content">
+                                <h1 class="display-2 mb-40">
+                                    @Html.Raw(item?.Title)
+                                </h1>
+                                <p class="mb-65">@item?.Subtitle</p>
+                                <form class="form-subcriber d-flex">
+                                    <input type="email" placeholder="Your emaill address" />
+                                    <button class="btn" type="submit">Subscribe</button>
+                                </form>
+                            </div>
                         </div>
-                    </div>
-                    <div class="single-hero-slider single-animation-wrap" style="background-image: url(assets/imgs/slider/slider-2.png)">
-                        <div class="slider-content">
-                            <h1 class="display-2 mb-40">
-                                Fresh Vegetables<br />
-                                Big discount
-                            </h1>
-                            <p class="mb-65">Save up to 50% off on your first order</p>
-                            <form class="form-subcriber d-flex">
-                                <input type="email" placeholder="Your emaill address" />
-                                <button class="btn" type="submit">Subscribe</button>
-                            </form>
-                        </div>
-                    </div>
+                    }
+
                 </div>
                 <div class="slider-arrow hero-slider-1-arrow"></div>
             </div>
