--- a/nest/nest/Views/Shop/List.cshtml
+++ b/nest/nest/Views/Shop/List.cshtml
@@ -1,7 +1,5 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "List Page";
 }
 <main class="main">
     <div class="page-header mt-30 mb-50">
